{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 698,
  "lineage": "d0fb97f2-2cbd-fc42-90b9-3c308b3ffc4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f2744cbe0c05998",
            "arn": "arn:aws:ec2:eu-west-2:686255973523:elastic-ip/eipalloc-00f2744cbe0c05998",
            "domain": "vpc",
            "id": "eipalloc-00f2744cbe0c05998",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-134-61-35.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.134.61.35",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-eip",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-eip",
              "Owner-Email": "maxiprofresh@gmail.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:internet-gateway/igw-075c2e1cde4a430d3",
            "id": "igw-075c2e1cde4a430d3",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0d1a75cb9afb1abe9-IG",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0d1a75cb9afb1abe9-IG",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/ext-alb/74134c7312eb1cb4",
            "arn_suffix": "app/ext-alb/74134c7312eb1cb4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-2083694320.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/ext-alb/74134c7312eb1cb4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0f61c33ea7a475f8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003132804fbf4fd15"
              },
              {
                "subnet_id": "subnet-069aaa0c290a9a66b"
              }
            ],
            "subnets": [
              "subnet-003132804fbf4fd15",
              "subnet-069aaa0c290a9a66b"
            ],
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/ext-alb/74134c7312eb1cb4"
          },
          "dependencies": [
            "aws_security_group.ext_alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "int_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/int-alb/38f90d227a2d112b",
            "arn_suffix": "app/int-alb/38f90d227a2d112b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-2131072441.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/int-alb/38f90d227a2d112b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-09a2c772cbf6f40a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08429e50fd00480b7"
              },
              {
                "subnet_id": "subnet-0a519579a10dcb832"
              }
            ],
            "subnets": [
              "subnet-08429e50fd00480b7",
              "subnet-0a519579a10dcb832"
            ],
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/int-alb/38f90d227a2d112b"
          },
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/ext-alb/74134c7312eb1cb4/04d8ca13bda63323",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/nginx-tgt/8ee88462155c3edb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/ext-alb/74134c7312eb1cb4/04d8ca13bda63323",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/ext-alb/74134c7312eb1cb4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/ext-alb/74134c7312eb1cb4/04d8ca13bda63323"
          },
          "dependencies": [
            "aws_lb.ext_alb",
            "aws_lb_target_group.nginx_tgt",
            "aws_security_group.ext_alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/int-alb/38f90d227a2d112b/1084d5fafa370533",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/wordpress-tgt/cda7fddd70bdd64a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/int-alb/38f90d227a2d112b/1084d5fafa370533",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:loadbalancer/app/int-alb/38f90d227a2d112b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/int-alb/38f90d227a2d112b/1084d5fafa370533"
          },
          "dependencies": [
            "aws_lb.int_alb",
            "aws_lb_target_group.wordpress_tgt",
            "aws_security_group.int_alb_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/tooling-tgt/3a5cbcdde15e7888",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener-rule/app/int-alb/38f90d227a2d112b/1084d5fafa370533/3fca1d4445c527bd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*/tooling*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener-rule/app/int-alb/38f90d227a2d112b/1084d5fafa370533/3fca1d4445c527bd",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener/app/int-alb/38f90d227a2d112b/1084d5fafa370533",
            "priority": 100,
            "region": "eu-west-2",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:listener-rule/app/int-alb/38f90d227a2d112b/1084d5fafa370533/3fca1d4445c527bd"
          },
          "dependencies": [
            "aws_lb.int_alb",
            "aws_lb_listener.web_listener",
            "aws_lb_target_group.tooling_tgt",
            "aws_lb_target_group.wordpress_tgt",
            "aws_security_group.int_alb_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/nginx-tgt/8ee88462155c3edb",
            "arn_suffix": "targetgroup/nginx-tgt/8ee88462155c3edb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/nginx-tgt/8ee88462155c3edb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-tgt",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-tgt",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/nginx-tgt/8ee88462155c3edb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/tooling-tgt/3a5cbcdde15e7888",
            "arn_suffix": "targetgroup/tooling-tgt/3a5cbcdde15e7888",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/tooling-tgt/3a5cbcdde15e7888",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/tooling-tgt/3a5cbcdde15e7888"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/wordpress-tgt/cda7fddd70bdd64a",
            "arn_suffix": "targetgroup/wordpress-tgt/cda7fddd70bdd64a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/wordpress-tgt/cda7fddd70bdd64a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:686255973523:targetgroup/wordpress-tgt/cda7fddd70bdd64a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f2744cbe0c05998",
            "association_id": "eipassoc-03a355de7fe1cf17d",
            "connectivity_type": "public",
            "id": "nat-097609384ffed98d9",
            "network_interface_id": "eni-0fdf0d9f4859d2cd4",
            "private_ip": "172.16.9.137",
            "public_ip": "13.134.61.35",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003132804fbf4fd15",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-nat",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-nat",
              "Owner-Email": "maxiprofresh@gmail.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075c2e1cde4a430d3",
            "id": "r-rtb-0edc2f2fff97b3ec81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0edc2f2fff97b3ec8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0edc2f2fff97b3ec8"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:route-table/rtb-073889097b797225f",
            "id": "rtb-073889097b797225f",
            "owner_id": "686255973523",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-Private-Route-Table",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-Private-Route-Table",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "rtb-073889097b797225f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:route-table/rtb-0edc2f2fff97b3ec8",
            "id": "rtb-0edc2f2fff97b3ec8",
            "owner_id": "686255973523",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-Public-Route-Table",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "production-Public-Route-Table",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "rtb-0edc2f2fff97b3ec8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b1558db8227f2fe",
            "region": "eu-west-2",
            "route_table_id": "rtb-073889097b797225f",
            "subnet_id": "subnet-0a519579a10dcb832"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009cf8a85f5852d77",
            "region": "eu-west-2",
            "route_table_id": "rtb-073889097b797225f",
            "subnet_id": "subnet-052cfa8e33adcc7b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f88859e2a38f2f4",
            "region": "eu-west-2",
            "route_table_id": "rtb-073889097b797225f",
            "subnet_id": "subnet-08429e50fd00480b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758171fbfad1b5b3",
            "region": "eu-west-2",
            "route_table_id": "rtb-073889097b797225f",
            "subnet_id": "subnet-00adda505bc0550e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07748a18700678b45",
            "region": "eu-west-2",
            "route_table_id": "rtb-0edc2f2fff97b3ec8",
            "subnet_id": "subnet-003132804fbf4fd15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c08f8a99564bdaf9",
            "region": "eu-west-2",
            "route_table_id": "rtb-0edc2f2fff97b3ec8",
            "subnet_id": "subnet-069aaa0c290a9a66b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-05069869892c1299a",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05069869892c1299a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-05069869892c1299a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-0b39ad2cb06ae8481",
            "description": "Allow traffic from webservers and Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b39ad2cb06ae8481",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-0b39ad2cb06ae8481",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-0f61c33ea7a475f8c",
            "description": "Allow HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f61c33ea7a475f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-0f61c33ea7a475f8c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-09a2c772cbf6f40a5",
            "description": "Allow traffic only from Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a2c772cbf6f40a5",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-09a2c772cbf6f40a5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-0a8ba86cc3c71f12f",
            "description": "Allow traffic from ALB and Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8ba86cc3c71f12f",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-0a8ba86cc3c71f12f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:security-group/sg-00ab0d46243e2ed83",
            "description": "Allow traffic from internal ALB and Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ab0d46243e2ed83",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "maxiprofresh@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "sg-00ab0d46243e2ed83",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "datalayer_mysql_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-488764920",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b39ad2cb06ae8481",
            "security_group_rule_id": "sgr-044d27f0e6b6cce03",
            "self": false,
            "source_security_group_id": "sg-05069869892c1299a",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "datalayer_mysql_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2959555120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b39ad2cb06ae8481",
            "security_group_rule_id": "sgr-00d5203aa80c04767",
            "self": false,
            "source_security_group_id": "sg-00ab0d46243e2ed83",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.datalayer_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "datalayer_nfs_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-597797562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b39ad2cb06ae8481",
            "security_group_rule_id": "sgr-0dd675374c0047a7a",
            "self": false,
            "source_security_group_id": "sg-00ab0d46243e2ed83",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.datalayer_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "int_alb_http_from_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-703684535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-09a2c772cbf6f40a5",
            "security_group_rule_id": "sgr-02c9fa3b0ab93b27d",
            "self": false,
            "source_security_group_id": "sg-0a8ba86cc3c71f12f",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3668823403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0a8ba86cc3c71f12f",
            "security_group_rule_id": "sgr-06a06110d0c68dfca",
            "self": false,
            "source_security_group_id": "sg-0f61c33ea7a475f8c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ext_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2679001534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0a8ba86cc3c71f12f",
            "security_group_rule_id": "sgr-0e98f56656208323a",
            "self": false,
            "source_security_group_id": "sg-05069869892c1299a",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_http_from_int_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3005347589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-00ab0d46243e2ed83",
            "security_group_rule_id": "sgr-0b12afa796e2511f4",
            "self": false,
            "source_security_group_id": "sg-09a2c772cbf6f40a5",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1078199904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-00ab0d46243e2ed83",
            "security_group_rule_id": "sgr-098dd871e58ec0dc2",
            "self": false,
            "source_security_group_id": "sg-05069869892c1299a",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-0a519579a10dcb832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a519579a10dcb832",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-01",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-01",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-0a519579a10dcb832",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-052cfa8e33adcc7b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052cfa8e33adcc7b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-02",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-02",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-052cfa8e33adcc7b8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-08429e50fd00480b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08429e50fd00480b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-03",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-03",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-08429e50fd00480b7",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-00adda505bc0550e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00adda505bc0550e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-04",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "private-subnet-04",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-00adda505bc0550e3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-003132804fbf4fd15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003132804fbf4fd15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "public-subnet-01",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "public"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "public-subnet-01",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-003132804fbf4fd15",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:subnet/subnet-069aaa0c290a9a66b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069aaa0c290a9a66b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255973523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "public-subnet-02",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "public"
            },
            "tags_all": {
              "Billing-Account": "686255973523",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "public-subnet-02",
              "Owner-Email": "maxiprofresh@gmail.com",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1a75cb9afb1abe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "subnet-069aaa0c290a9a66b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:686255973523:vpc/vpc-0d1a75cb9afb1abe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02dc771805cbd3465",
            "default_route_table_id": "rtb-0b0c9763df26c1a7a",
            "default_security_group_id": "sg-02aa9638952b1166e",
            "dhcp_options_id": "dopt-029aac00a3ef0bd75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1a75cb9afb1abe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0c9763df26c1a7a",
            "owner_id": "686255973523",
            "region": "eu-west-2",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255973523",
            "id": "vpc-0d1a75cb9afb1abe9",
            "region": "eu-west-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}